# PCRF-CDR-to-Kafka

./: CMakeLists.txt  Config.cpp  Config.h  MainLoopController.cpp  MainLoopController.h  Parser.cpp  Parser.h  main.cpp  pcrf-cdr-avro-schema.avsc  pcrf-cdr-avro.hh
